styles.css
* {
    box-sizing: border-box;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 20px;
}
dialog {
    border: none;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    text-align: center;

}
form {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 15px;
    font-size: 1rem;
}
input {
    border: none;
    border-bottom: 1px solid black;
}
input:focus {
    outline: none;
}
input:-webkit-autofill,
input:-webkit-autofill:focus {
    transition: background-color 0s 600000s, color 0s 600000s !important;
  }
.start {
    margin-top: 10px;
    border: none;
    background-color: white;
    cursor: pointer;
}
.start:hover {
    transform: scale(1.1);
    transition: all .2s ease-in-out
}
body {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
    width: 100vw;
}
.container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 5px;
    position: relative;
}
.score {
    display: flex;
    justify-content: space-between;
    width: 80%;
    margin-bottom: 20px;
}
.p1Score,
.p2Score {
    font-size: 1.2rem;
}
.board {
    display: grid;
    grid-template: repeat(3, 1fr) / repeat(3, 1fr);
    width: 50vw;
    aspect-ratio: 1/1;
    margin: 30px;
}
.cell {
    background-color: white;
    border: none;
    font-size: 1.5rem;
}
.cell:hover {
    cursor: pointer;
}
.cell[data-row="0"],
.cell[data-row="1"]{
    border-bottom: 1px solid black;
}
.cell[data-col="0"],
.cell[data-col="1"] {
    border-right: 1px solid black;
}
.announce {
    font-size: 1.1rem;
    height: 25px
}
.resetBtn {
    margin-top: 10px;
    border: none;
    background-color: white;
    cursor: pointer;
    font-size: 0.8em;
}
.resetBtn:hover {
    transform: scale(1.1);
    transition: all .2s ease-in-out
}

@media (max-width: 600px) {
    .board {
        width: 75vw;
    }
}

